@@ -8,6 +8,19 @@ import com.ludogoriesoft.sigmatherm.dto.emag.EmagProduct;
 import com.ludogoriesoft.sigmatherm.entity.Synchronization;
 import com.ludogoriesoft.sigmatherm.entity.enums.Platform;
 import com.ludogoriesoft.sigmatherm.exception.EmagException;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.stereotype.Service;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
+import org.springframework.web.client.RestTemplate;
+
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -15,163 +28,153 @@ import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.Base64;
 import java.util.List;
-import java.util.logging.Logger;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Service;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.web.client.RestTemplate;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class EmagService {
 
-  private static final String AUTHORIZATION = "Authorization";
-  private static final String TOKEN_PREFIX = "Basic ";
-  private static final String DATE_TIME_PATTERN = "yyyy-MM-dd HH:mm:ss";
-  private static final String READ_PATH = "/read";
-  private static final String COUNT_PATH = "/count";
+    private static final String AUTHORIZATION = "Authorization";
+    private static final String TOKEN_PREFIX = "Basic ";
+    private static final String DATE_TIME_PATTERN = "yyyy-MM-dd HH:mm:ss";
+    private static final String READ_PATH = "/read";
+    private static final String COUNT_PATH = "/count";
 
-  private static final Logger LOGGER = Logger.getLogger(EmagService.class.getName());
+    @Value("${emag.api.username}")
+    private String username;
 
-  @Value("${emag.api.username}")
-  private String username;
+    @Value("${emag.api.password}")
+    private String password;
 
-  @Value("${emag.api.password}")
-  private String password;
+    @Value("${emag.api.bg-url}")
+    private String emagBgUrl;
 
-  @Value("${emag.api.bg-url}")
-  private String emagBgUrl;
+    @Value("${emag.api.ro-url}")
+    private String emagRoUrl;
 
-  @Value("${emag.api.ro-url}")
-  private String emagRoUrl;
+    @Value("${emag.api.hu-url}")
+    private String emagHuUrl;
 
-  @Value("${emag.api.hu-url}")
-  private String emagHuUrl;
+    private final RestTemplate restTemplate;
+    private final ProductService productService;
+    private final SynchronizationService synchronizationService;
 
-  private final RestTemplate restTemplate;
-  private final ProductService productService;
-  private final SynchronizationService synchronizationService;
-
-  @Scheduled(cron = "0 0 0 * * *")
-  public void fetchEmagBgOrders() {
-    Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagBg);
-    Synchronization currentSync = synchronizationService.createSync(Platform.eMagBg);
-    fetchEmagOrders(emagBgUrl, currentSync, lastSync);
-  }
-
-  @Scheduled(cron = "0 2 0 * * *")
-  public void fetchEmagRoOrders() {
-    Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagRo);
-    Synchronization currentSync = synchronizationService.createSync(Platform.eMagRo);
-    fetchEmagOrders(emagRoUrl, currentSync, lastSync);
-  }
-
-  @Scheduled(cron = "0 4 0 * * *")
-  public void fetchEmagHuOrders() {
-    Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagHu);
-    Synchronization currentSync = synchronizationService.createSync(Platform.eMagHu);
-    fetchEmagOrders(emagHuUrl, currentSync, lastSync);
-  }
-
-  private void fetchEmagOrders(
-      String url, Synchronization synchronization, Synchronization lastSync) {
-    EmagOrdersCountResponse ordersCountResponse =
-        getEmagOrdersCountResponse(url + COUNT_PATH, lastSync);
-    if (ordersCountResponse.isError()) {
-      LOGGER.warning(ordersCountResponse.getMessages().getFirst());
-      throw new EmagException(ordersCountResponse.getMessages().getFirst());
+    @Scheduled(cron = "0 0 0 * * *")
+    public void fetchEmagBgOrders() {
+        Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagBg);
+        Synchronization currentSync = synchronizationService.createSync(Platform.eMagBg);
+        fetchEmagOrders(emagBgUrl, currentSync, lastSync);
     }
 
-    EmagOrdersCount ordersCount = ordersCountResponse.getResults();
+    @Scheduled(cron = "0 2 0 * * *")
+    public void fetchEmagRoOrders() {
+        Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagRo);
+        Synchronization currentSync = synchronizationService.createSync(Platform.eMagRo);
+        fetchEmagOrders(emagRoUrl, currentSync, lastSync);
+    }
 
-    for (int i = 1; i <= ordersCount.getNoOfPages(); i++) {
-      EmagOrdersResponse response = getEmagOrdersResponse(url + READ_PATH, i, lastSync);
+    @Scheduled(cron = "0 4 0 * * *")
+    public void fetchEmagHuOrders() {
+        Synchronization lastSync = synchronizationService.getLastSyncByPlatform(Platform.eMagHu);
+        Synchronization currentSync = synchronizationService.createSync(Platform.eMagHu);
+        fetchEmagOrders(emagHuUrl, currentSync, lastSync);
+    }
 
-      if (response.isError()) {
-        LOGGER.warning(response.getMessages().getFirst());
-        throw new EmagException(response.getMessages().getFirst());
-      }
-
-      for (EmagOrder order : response.getResults()) {
-        for (EmagProduct product : order.getProducts()) {
-          productService.reduceAvailability(product.getProduct_id(), product.getQuantity());
-          productService.setSync(product.getProduct_id(), synchronization);
+    private void fetchEmagOrders(
+            String url, Synchronization synchronization, Synchronization lastSync) throws EmagException {
+        EmagOrdersCountResponse ordersCountResponse =
+                getEmagOrdersCountResponse(url + COUNT_PATH, lastSync);
+        if (ordersCountResponse.isError()) {
+            log.warn(ordersCountResponse.getMessages().get(0));
+            throw new EmagException(ordersCountResponse.getMessages().get(0));
         }
-      }
+
+        EmagOrdersCount ordersCount = ordersCountResponse.getResults();
+
+        for (int i = 1; i <= ordersCount.getNoOfPages(); i++) {
+            EmagOrdersResponse response = getEmagOrdersResponse(url + READ_PATH, i, lastSync);
+
+            if (response.isError()) {
+                log.warn(response.getMessages().get(0));
+                throw new EmagException(response.getMessages().get(0));
+            }
+
+            for (EmagOrder order : response.getResults()) {
+                for (EmagProduct product : order.getProducts()) {
+                    productService.reduceAvailability(product.getProduct_id(), product.getQuantity());
+                    productService.setSync(product.getProduct_id(), synchronization);
+                }
+            }
+        }
+
+        synchronizationService.setEndDate(synchronization);
+        log.info(synchronization.getPlatform() + " synchronized successfully!");
     }
 
-    synchronizationService.setEndDate(synchronization);
-    LOGGER.info(synchronization.getPlatform() + " synchronized successfully!");
-  }
+    private EmagOrdersResponse getEmagOrdersResponse(String url, int page, Synchronization lastSync) {
+        HttpHeaders headers = getHeaders();
 
-  private EmagOrdersResponse getEmagOrdersResponse(String url, int page, Synchronization lastSync) {
-    HttpHeaders headers = getHeaders();
+        MultiValueMap<String, String> body = getOrdersRequestBody(page, lastSync);
 
-    MultiValueMap<String, String> body = getOrdersRequestBody(page, lastSync);
+        HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(body, headers);
 
-    HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(body, headers);
-
-    ResponseEntity<EmagOrdersResponse> response =
-        restTemplate.postForEntity(url, entity, EmagOrdersResponse.class);
-    return response.getBody();
-  }
-
-  private EmagOrdersCountResponse getEmagOrdersCountResponse(String url, Synchronization lastSync) {
-    HttpHeaders headers = getHeaders();
-    MultiValueMap<String, String> body = getOrdersRequestBody(1, lastSync);
-    HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(body, headers);
-
-    ResponseEntity<EmagOrdersCountResponse> response =
-        restTemplate.postForEntity(url, entity, EmagOrdersCountResponse.class);
-    return response.getBody();
-  }
-
-  private HttpHeaders getHeaders() {
-    HttpHeaders headers = new HttpHeaders();
-    headers.set(AUTHORIZATION, createBasicAuthHeader());
-    headers.setAccept(List.of(MediaType.APPLICATION_JSON));
-    return headers;
-  }
-
-  private String createBasicAuthHeader() {
-    String auth = username + ":" + password;
-    byte[] encodedAuth = Base64.getEncoder().encode(auth.getBytes(StandardCharsets.UTF_8));
-    return TOKEN_PREFIX + new String(encodedAuth);
-  }
-
-  private static MultiValueMap<String, String> getOrdersRequestBody(
-      int page, Synchronization lastSync) {
-
-    MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
-
-    ZoneId zone = ZoneId.of("Europe/Sofia");
-    LocalDate today = LocalDate.now(zone);
-
-    LocalDateTime startTime = today.atStartOfDay();
-    LocalDateTime endTime = today.atTime(23, 59, 59);
-
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_TIME_PATTERN);
-
-    String createdAfter = startTime.format(formatter);
-    if (lastSync != null) {
-      createdAfter =
-          lastSync
-              .getEndDate()
-              .atZone(ZoneId.systemDefault())
-              .withZoneSameInstant(zone)
-              .toLocalDateTime()
-              .format(formatter);
+        ResponseEntity<EmagOrdersResponse> response =
+                restTemplate.postForEntity(url, entity, EmagOrdersResponse.class);
+        return response.getBody();
     }
-    String createdBefore = endTime.format(formatter);
 
-    body.add("createdBefore", createdBefore);
-    body.add("createdAfter", createdAfter);
-    body.add("status", "4");
-    body.add("currentPage", String.valueOf(page));
-    return body;
-  }
+    private EmagOrdersCountResponse getEmagOrdersCountResponse(String url, Synchronization lastSync) {
+        HttpHeaders headers = getHeaders();
+        MultiValueMap<String, String> body = getOrdersRequestBody(1, lastSync);
+        HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(body, headers);
+
+        ResponseEntity<EmagOrdersCountResponse> response =
+                restTemplate.postForEntity(url, entity, EmagOrdersCountResponse.class);
+        return response.getBody();
+    }
+
+    private HttpHeaders getHeaders() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.set(AUTHORIZATION, createBasicAuthHeader());
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        return headers;
+    }
+
+    private String createBasicAuthHeader() {
+        String auth = username + ":" + password;
+        byte[] encodedAuth = Base64.getEncoder().encode(auth.getBytes(StandardCharsets.UTF_8));
+        return TOKEN_PREFIX + new String(encodedAuth);
+    }
+
+    private static MultiValueMap<String, String> getOrdersRequestBody(
+            int page, Synchronization lastSync) {
+
+        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
+
+        ZoneId zone = ZoneId.of("Europe/Sofia");
+        LocalDate today = LocalDate.now(zone);
+
+        LocalDateTime startTime = today.atStartOfDay();
+        LocalDateTime endTime = today.atTime(23, 59, 59);
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern(DATE_TIME_PATTERN);
+
+        String createdAfter = startTime.format(formatter);
+        if (lastSync != null) {
+            createdAfter =
+                    lastSync
+                            .getEndDate()
+                            .atZone(ZoneId.systemDefault())
+                            .withZoneSameInstant(zone)
+                            .toLocalDateTime()
+                            .format(formatter);
+        }
+        String createdBefore = endTime.format(formatter);
+
+        body.add("createdBefore", createdBefore);
+        body.add("createdAfter", createdAfter);
+        body.add("status", "4");
+        body.add("currentPage", String.valueOf(page));
+        return body;
+    }
 }
